# zeref-Aegisub-Scripts

./: .gitignore  DependencyControl.json  LEIA-ME.MD  LEIA-ME.md  LICENSE  README.MD  build.sh  build_lua.py  meson.build  readme.md  win-build.bat
.github/workflows/: ci.yml
dependencies/: CMakeLists.txt  build.bat  build.sh  clipper.wrap.cpp  list.txt
dependencies/additional/zgiflib/: giflib.moon
dependencies/additional/zlodepng/: lodepng.moon
dependencies/additional/zpclipper/: clipper.moon
dependencies/additional/zturbojpeg/: turbojpeg.moon
dependencies/libpolyclipping/: CMakeLists.txt  clipper.wrap.cpp
giflib/: giflib.moon  meson.build  win-build.bat
libjpeg-turbo/: meson.build  turbojpeg.moon  win-build.bat
libraries/: Yutils.lua
libraries/ZF/: libs.moon  utils.moon
libraries/ZF/clipper/: clipper.moon
libraries/img-libs/: buffer.lua  img.moon
libraries/img-libs/bmp/: bmp.lua
libraries/img-libs/gif/: gif.lua  gif.moon
libraries/img-libs/image_tracer/: image_tracer.lua
libraries/img-libs/jpg/: jpg.lua
libraries/img-libs/png/: blitbuffer.lua  png.lua  png.moon
libraries/requireffi/: requireffi.lua
lodepng/: lodepng.moon  meson.build  win-build.bat
lua-polyclipping/: meson.build  polyclipping.moon  win-build.bat
macros/: zeref.bezier.moon  zeref.envelope_distort.moon  zeref.everything_shape.moon  zeref.gradient.moon  zeref.image_decode.moon  zeref.image_tracer.moon  zeref.interpolate.moon  zeref.shape_relocate.moon  zeref.stroke.moon  zeref.text_in_clip.moon  zeref.txt_extension.moon  zf.allCharsTo.moon  zf.everythingShape.moon  zf.gradientCut.moon  zf.line2fbf.moon  zf.makeImage.moon  zf.split.moon  zf.textInClip.moon
macros/Kara-Templater/: README.MD  kara-templater-mod.moon
macros/Kara-Templater/examples/: char_examples.ass  code_examples.ass  line_examples.ass  motions.ass  syl_examples.ass  testes.ass  word_exemplos.ass
modules/ZF/: main.moon
modules/ZF/2D/: clipper.moon  paths.moon  segment.moon  shape.moon
modules/ZF/ass/: dialog.moon  fbf.moon  line.moon
modules/ZF/ass/tags/: tags.moon
modules/ZF/img/: bmp.moon  gif.moon  img.moon  jpg.moon  png.moon  potrace.moon
modules/ZF/main/2D/: clipper.moon
modules/ZF/main/img/: bmp.moon  gif.moon  img.moon  jpg.moon  png.moon
modules/ZF/util/: config.moon  util.moon
modules/zgiflib/: giflib.moon
modules/zimg/: main.moon
modules/zimg/main/giflib/: giflib.moon
modules/zimg/main/lodepng/: lodepng.moon
modules/zimg/main/turbojpeg/: turbojpeg.moon
modules/zlodepng/: lodepng.moon
modules/zpclipper/: clipper.moon
modules/zturbojpeg/: turbojpeg.moon
scripts/: moon2lua.moon
src/: zf.allCharsTo.moon  zf.everythingShape.moon  zf.gradientCut.moon  zf.line2fbf.moon  zf.makeImage.moon  zf.split.moon  zf.textInClip.moon
src/ZF/: main.moon
src/ZF/2D/: bezier.moon  clipper.moon  path.moon  paths.moon  point.moon  poly.moon  segment.moon  shape.moon
src/ZF/ass/tags/: layer.moon
src/ZF/defs/: config.moon  headers.moon
src/ZF/img/: bmp.moon  buffer.moon  gif.moon  img.moon  jpg.moon  png.moon  potrace.moon
src/ZF/text/: tags.moon  text.moon
src/ZF/util/: config.moon  fbf.moon  math.moon  table.moon  util.moon
src/autoload/: zf.envelope_distort.moon  zf.everything_shape.moon  zf.gradient.moon  zf.interpolate.moon  zf.make_image.moon  zf.set_aegisub.moon  zf.stroke.moon  zf.text_in_clip.moon
src/include/ZF/: bezier.moon  config.moon  headers.moon  image.moon  main.moon  math.moon  poly.moon  shape.moon  table.moon  tags.moon  text.moon  util.moon  utils.moon
src/include/requireffi/: requireffi.lua
subprojects/: libjpeg-turbo.wrap
